--- a/environment.yml
+++ b/environment.yml
@@ -8,5 +8,7 @@ dependencies:
   - ipywidgets=7.4*
   - widgetsnbextension=3.4*
   - plotly=3.6*
+  - sympy=1.3*
+  - scipy=1.2*
   - pip:
      - "git+https://github.com/brian-team/brian2.git"
