--- a/environment.yml
+++ b/environment.yml
@@ -10,5 +10,7 @@ dependencies:
   - plotly=3.6*
   - sympy=1.3*
   - scipy=1.2*
+  - matplotlib=2.1*
+  - ipympl=0.2*
   - pip:
      - "git+https://github.com/brian-team/brian2.git"
