--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - cython=0.29*
   - nose=1.3*
   - ipywidgets=7.4*
+  - notebook=5.7*
   - widgetsnbextension=3.4*
   - plotly=3.6*
   - sympy=1.3*
@@ -13,3 +14,7 @@ dependencies:
   - matplotlib=2.1*
   - ipympl=0.2*
   - brian2=2.2.2.1
+  - pip=19.*
+  - pip:
+    - brian2tools
+
